tests/negative_tests/syntax_errors/missing_brace.c
// INVALID - Syntax Error: missing closing brace
// Expected: "expected '}'"
int main() {
    int x;
    x = 5;
    return x;
// Missing closing brace
